<resources>
    <string name="app_name">iCult</string>
    <string name="textoEntradaNome">Nome</string>
    <string name="textoEntradaEmail">E-mail</string>
    <string name="textoEntradaSenha">Senha</string>
    <string name="textoBotaoCadastrar">Cadastrar</string>
    <string name="textoTextViewToLogin">Já é cadastrado ? Entre em sua conta aqui</string>
    <string name="textoLogin">Login</string>
    <string name="entradaEmail">E-mail</string>
    <string name="entradaLoginSenha">Senha</string>
    <string name="entradaLoginEmail">E-mail</string>
    <string name="textoBotaoLogin">Login</string>
    <string name="textoTextViewToCadastro">Ainda não é cadastrado ? Cadastre-se aqui</string>
    <string name="textoBotaoGaleria">Galeria</string>
    <string name="textoBotaoEnviarImage">Enviar imagem</string>
    <string name="hintEntradaTitulo">Título</string>
    <string name="hintEntradaDescricao">Breve descrição</string>
    <string name="title_activity_maps">Map</string>
    <string name="textoBotaoTiraFoto">Tirar foto</string>
    <string name="textoBotaoCamDescricao">Descrição</string>
    <string name="textoentradaCamDescricao">Breve descrição</string>
    <string name="textoEntradaCamTitulo">Título</string>
    <string name="textoBotaoPostarFoto">Postar foto camera</string>
    <string name="entradaTituloPostaFoto">Título</string>
    <string name="textoentradaTituloPostaFoto">Título</string>
    <string name="entradaDescricaoPostaFoto">Descrição</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="textoBotaoPostarFotoCamera"> Postar camera</string>
    <string name="textoBotaoPostarFotoGaleria"> Postar galeria</string>
    <string name="textoETPesquisaCidade"> Digite o nome de uma cidade para pesquisar</string>
    <string name="textoETPesquisaPais"> Digite o nome de um país para pesquisar</string>
    <string name="textoBotaoPesquisa"> Pesquisar </string>
    <string name="textoRadioButtonPais"> País </string>
    <string name="textoRadioButtonCidade"> Cidade </string>
    <string name="textoTVPesquisa"> Selecione a categoria </string>
    <string name="textoETEntradaCidadePesquisa"> Nome da cidade            </string>
    <string name="textoBotaoPesquisaCidade"> Pesquisar </string>
    <string name="textoETEntradaPais"> Pesquisar pais </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textoBotaoGostei">Gostei</string>
    <string name="textoBotaoVerNoMapa">Ver no mapa</string>
    <string name="textViewFotoFragment">Upload de foto</string>
    <string name="textoBotaoCamera">Tirar foto</string>
    <string name="textoBotaoFoto">Tirar foto da camera</string>
    <string name="action_configurações">Configurações</string>
    <string name="textoTextViewConfig">Configurações de usuário</string>
    <string name="textoBotaoAlteraNome">Alterar</string>
    <string name="textoBotaoAlteraEmail">Alterar</string>
    <string name="textoBotaoSair">Sair</string>
    <string name="textoTextViewCadastro">Cadastro</string>
    <string name="textoTVActivityUpFoto">Upload de foto</string>
    <string name="hintETentratitulo">Título</string>
    <string name="hintETentraDescricao">Descrição</string>
    <string name="hintETentraTitulo">Título</string>
    <string name="textoNavMainFeedGlobal">Feed global</string>
    <string name="textoNavMainMapa">Mapa</string>
    <string name="textoNavMainPesquisa">Pesquisa</string>
    <string name="textoItemNavMainInformações">Informações</string>
    <string name="textoNavMainCompartilhar">Compartilhar</string>
    <string name="textoNavMainSobre">Sobre nós</string>
    <string name="textNavMainConfigurações">Configurações</string>
    <string name="textoNavMainFeedback">Feedback</string>
    <string name="textoNavMainConfigurações">Configurações</string>
    <string name="textoNavMainContato">Contato</string>
    <string name="textTVContato">Contato</string>
    <string name="textoETAssuntoContato">Assunto</string>
    <string name="textoETmensagemContato">Mensagem</string>
    <string name="textoTVInfoContato">para enviar este e-mail...</string>
    <string name="textoBotaoEnviarEmail">Enviar e-mail</string>
    <string name="textoTVEsqueciSenha">Esqueci minha senha</string>
    <string name="textoTVSenhaActivity">Recuperação de senha</string>
    <string name="textoBotaoRecupSenha">Recuperar senha</string>
    <string name="textoTVVoltar">Voltar</string>
    <string name="textoItemNavMainOpcao">Opções</string>
    <string name="textonavMainMinhasFotos">Minhas fotos</string>
    <string name="txtTituloSobreNos">Sobre nós</string>
    <string name="txtNomeFarruda">Felipe Arruda de Camargo</string>
    <string name="txtEmailFarruda">felipearruda74@gmail.com</string>
    <string name="txtNomeLG">Luis Guilherme Rodrigues de Oliveira</string>
    <string name="txtEmailLG">rodrigues.luisguilherme@gmail.com</string>
    <string name="txtBotaoVoltar">Voltar</string>
    <string name="txtSubTituloSobreNos">Desenvolvido por alunos do 3° ano do curso de informática integrado ao ensino médio da ETEC Bent Quirino em Campinas/SP. </string>
</resources>
