<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/textoItemNavMainOpcao">
        <menu>

            <!-- Sobre nós -->
            <item
                android:id="@+id/nav_feedGlobal"
                android:icon="@drawable/ic_action_feed"
                android:title="@string/textoNavMainFeedGlobal" />
            <!-- Mapa com todos os marcadores -->
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_action_map"
                android:title="@string/textoNavMainMapa" />

            <!-- Pesquisa de lugar -->
            <item
                android:id="@+id/nav_pesquisa"
                android:icon="@drawable/ic_action_pesquisa"
                android:title="@string/textoNavMainPesquisa" />

            <item
                android:id="@+id/nav_minhasFotos"
                android:title="@string/textonavMainMinhasFotos"
                android:icon="@drawable/ic_minhasfotos"
                />


        </menu>
    </item>

    <item android:title="@string/textoItemNavMainInformações">
        <menu>

            <!-- Configurações de usuario -->
            <item
                android:id="@+id/nav_configuracao"
                android:icon="@drawable/ic_action_config"
                android:title="@string/textNavMainConfigurações" />

            <!-- Contato -->
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/textoNavMainContato" />

            <!-- Sobre nós -->
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_action_info"
                android:title="@string/textoNavMainSobre" />

        </menu>
    </item>

</menu>
