<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.luisguilherme.icult.CadastroActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTextViewCadastro"
            android:layout_marginTop="8dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/entradaNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/textoEntradaNome"
            android:inputType="none" />

        <EditText
            android:id="@+id/entradaEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/textoEntradaEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/entradaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/textoEntradaSenha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botaoCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textoBotaoCadastrar"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <TextView
            android:id="@+id/textViewToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textoTextViewToLogin"
            android:textAlignment="center"
           />



</LinearLayout>
