<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luisguilherme.icult.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoLogin"
            android:textAlignment="center"
            android:id="@+id/textoLogin"
            />

        <EditText
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entradaLoginEmail"
            android:hint="@string/entradaLoginEmail"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entradaLoginSenha"
            android:hint="@string/entradaLoginSenha"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            />

        <Button
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botaoLogin"
            android:text="@string/textoBotaoLogin"
            android:textAlignment="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <TextView
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewToCadastro"
            android:text="@string/textoTextViewToCadastro"
            />

        <TextView
            android:layout_marginTop="@dimen/marginTopPadrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEsqueciSenha"
            android:text="@string/textoTVEsqueciSenha"
            android:textAlignment="center"
            />
    </LinearLayout>

</LinearLayout>
