<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.luisguilherme.icult.FragmentContato">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:text="@string/textTVContato"
        android:id="@+id/tvContato"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textoETAssuntoContato"
        android:layout_marginTop="8dp"
        android:id="@+id/entradaAssunto"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textoETmensagemContato"
        android:id="@+id/entradaMensagem"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvInfo"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:id="@+id/botaoEnviarEmail"
        android:text="@string/textoBotaoEnviarEmail"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

</LinearLayout>
