<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="com.example.luisguilherme.icult.UpFotoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="30dp"
            android:id="@+id/tvFotoFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:text="@string/textViewFotoFragment"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Title" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:id="@+id/imgViewFragmentFoto"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEntradaTitulo"
            android:id="@+id/entradaTituloFragment" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEntradaDescricao"
            android:id="@+id/entradaDescricaoFragment"/>

        <Button
            android:id="@+id/botaoGaleriaFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abreGaleria"
            android:text="@string/textoBotaoGaleria" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botaoCameraFragment"
            android:text="@string/textoBotaoCamera"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <!-- LinearLayout do botao para up da camera -->
            <LinearLayout
                android:visibility="invisible"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearBotaoUpCamera">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoBotaoPostarFotoCamera"
                    android:id="@+id/botaoPostarFotoFragmentCamera"
                    />
            </LinearLayout>

            <!-- LinearLayout do botao para up da galera -->
            <LinearLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearBotaoUpGalera">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoBotaoPostarFotoGaleria"
                    android:id="@+id/botaoPostarFotoFragmentGaleria"
                    />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>





</LinearLayout>
