<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luisguilherme.icult.FragmentSobreNos">


    <!-- tv titulo do fragment: sobre nos   -->

    <TextView
        android:id="@+id/textView3"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtTituloSobreNos"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  tv subtitulo  -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtSubTituloSobreNos"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0" />

    <!-- tv dados farruda -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeFarruda"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <!-- tv email Farruda-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtEmailFarruda"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!-- tv dados LG -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeLG"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <!-- tv email LG -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtEmailLG"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textView8" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Integrantes:"
        android:textSize="16sp"
        android:id="@+id/textView7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
